<?xml version="1.0"?>
<package format="2">
  <name>gazebo_sensor_collection</name>
  <version>0.0.1</version>
  <description>The gazebo_sensor_collection package</description>

  <maintainer email="massimiliano.bosi@hipert.it">Massimiliano Bosi</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>

  <export>
  </export>
</package>
