<?xml version="1.0"?>
<package format="2">
  <name>gazebo_sensor_collection</name>
  <version>0.0.2</version>
  <description>The gazebo_sensor_collection package</description>

  <maintainer email="massimiliano.bosi@hipert.it">Massimiliano Bosi</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>

  <export>
  </export>
</package>
